--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,13 +1,13 @@
 
-
-
-    
     <div class="Parent">
       <div class="left">
         <app-list-comp></app-list-comp>
       </div>
       <div class="right">
       <app-designer></app-designer>
-      
       </div>
   </div>
+  <div class="editor">
+    <app-editor></app-editor>
+  </div>
+ 
