table data updated

--- a/src/app/main-screen/all-components/table/table.component.html
+++ b/src/app/main-screen/all-components/table/table.component.html
@@ -1,5 +1,5 @@
-<kendo-grid [data]="tableData">
-    <kendo-grid-column *ngFor="let data of tableData" [field]="data.ProductName" [title]="data.ProductName">
+<kendo-grid [data]="gridData?.tableData" [title]="gridData?.name">
+    <kendo-grid-column *ngFor="let data of gridData?.tableData" [field]="data.ProductName" [title]="data.ProductName">
         <ng-template kendoGridCellTemplate let-dataItem>
             {{ dataItem.ProductName }}
         </ng-template>
