--- a/src/app/main-screen/designer/designer.component.html
+++ b/src/app/main-screen/designer/designer.component.html
@@ -1,8 +1,7 @@
 <div   (drop)="dropComponent($event)"
 (dragover)="allowDragOverComponent($event)">
   <kendo-tilelayout
-  [columns]="10"
-  [rowHeight]="255"
+  [columns]="1"
   [resizable]="true"
   [reorderable]="true"
   (reorder)="onReorder($event)"
@@ -10,11 +9,20 @@
 >
   <kendo-tilelayout-item
   *ngFor="let item of listComponents; let i = index"
-  title="Page Views" [col]="1" [colSpan]="4">
-    <kendo-tilelayout-item-body>
-      <app-table > </app-table>
-      <!-- <page-views-chart></page-views-chart> -->
-    </kendo-tilelayout-item-body>
+  [col]="1" [colSpan]="12" title="Page Views">
+  <div [ngSwitch]="item?.controlType">
+  <div *ngSwitchCase="'table'" >
+    <!-- <kendo-tilelayout-item-header>
+      <h2 >
+        {{ item.name }}
+      </h2>
+    </kendo-tilelayout-item-header> -->
+  <kendo-tilelayout-item-body >
+    <app-table [getTableData]="item"> </app-table>
+    <!-- <page-views-chart></page-views-chart> -->
+  </kendo-tilelayout-item-body>
+</div>
+  </div>
   </kendo-tilelayout-item>
 
    <!-- <kendo-tilelayout-item title="Conversion Rate" [col]="1" [colSpan]="4">
@@ -26,7 +34,7 @@
 
   <!--<kendo-tilelayout-item title="Most Visited Pages" [col]="1" [colSpan]="2">
     <kendo-tilelayout-item-body>
-       <most-visited-chart></most-visited-chart> 
+       <most-visited-chart></most-visited-chart>
     </kendo-tilelayout-item-body>
   </kendo-tilelayout-item>
 
@@ -39,7 +47,7 @@
 
   <kendo-tilelayout-item title="Visitors" [col]="4" [rowSpan]="2">
     <kendo-tilelayout-item-body>
-      <visitors-chart></visitors-chart> 
+      <visitors-chart></visitors-chart>
     </kendo-tilelayout-item-body>
   </kendo-tilelayout-item>
 
@@ -50,7 +58,7 @@
     [rowSpan]="2"
   >
     <kendo-tilelayout-item-body>
-     <users-grid></users-grid> 
+     <users-grid></users-grid>
     </kendo-tilelayout-item-body>
   </kendo-tilelayout-item>
 
@@ -70,11 +78,10 @@
     [colSpan]="2"
   >
     <kendo-tilelayout-item-body>
-     <conversion-chart></conversion-chart> 
+     <conversion-chart></conversion-chart>
     </kendo-tilelayout-item-body>
   </kendo-tilelayout-item> -->
 </kendo-tilelayout>
 </div>
 
 
-    
